--- a/part5_bloglist_frontend/src/index.css
+++ b/part5_bloglist_frontend/src/index.css
@@ -43,3 +43,9 @@ td {
   border: 1px solid gray;
   border-collapse: collapse;
 }
+.blogStyle {
+  padding: 10px 4px;
+  border: 1px solid black;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
